--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "webdriver-manager>=2.4.0",
     "Cerberus>=1.3.2",
     "tqdm>=4.47.0",
+    "python-jobspy",
 ]
 
 [project.optional-dependencies]
